terraform/k8s/api-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-server-service
  labels:
    app: api-server
spec:
  selector:
    app: api-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP # Internal service
